# django-samurai

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  all_directories_structure.txt  pyproject.toml
samurai/: __init__.py  file_router_test.py  test_samurai.py
tests/: settings.py  test_samurai.py  test_views.py
tests/demo_project/: test_functional.py
tests/demo_project/demo/: models.py  settings.py  urls.py
tests/demo_project/demo/views/: __init__.py  current_time.py  not-a-view.py
tests/demo_project/demo/views/colors/: <slug:slug>.py  __init__.py  add.py
tests/views/: __init__.py  current_time.py
tests/views/colors/: <slug:slug>.py  __init__.py  add.py
